feat: ajustes en separacion de menu mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -135,7 +135,7 @@ main {
 .navbar__menu-options li .link-button {
   position: relative;
 }
-.navbar__menu-options li .link-button {
+.navbar__menu-options li .link-button a {
   display: block;
 }
 .navbar__menu-options li .link-button i {
