--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -63,11 +63,10 @@ main {
 .navbar__options-container {
   display: flex;
   align-items: center;
-  padding-top: 5px;
 }
 .navbar__flags {
   display: flex;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   margin-right: 12px;
   gap: 8px;
 }
@@ -88,6 +87,7 @@ main {
   font-size: 32px;
   padding: 10px 12px;
   cursor: pointer;
+  margin-bottom: 13px;
 }
 .navbar__menu {
   height: 0;
@@ -206,6 +206,14 @@ main {
   }
   .navbar.active-mobile {
     background-color: transparent;
+  }
+  .navbar__options-container {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .navbar__flags {
+    margin: 0;
+    margin-top: 8px;
   }
   .navbar__menu-options li {
     position: relative;
