feat: inclusion de archivos json con data y scripts que setean la data

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -10,8 +10,7 @@
 }
 .swiper-slide img {
   position: absolute;
-  height: 100vh !important;
-  width: initial !important;
+  height: 100vh;
 }
 .swiper-slide__text-image {
   position: absolute;
